cap 1 y 2 terminado, avance 3

--- a/Agradecimientos/Dedicatoria.tex
+++ b/Agradecimientos/Dedicatoria.tex
@@ -1,5 +1,5 @@
 \begin{dedication}
-A mis padres, Martha Aidé Arredondo Solís y Francisco Verdugo Fierro.
+A mi esposa Mariana Gonzalez Acosta. A mis padres, Martha Aidé Arredondo Solís y Francisco Verdugo Fierro.
 A mis hermanos Dulce Esmeralda Verdugo Arredondo y Néstor Javier Espino Arredondo.
 Por ayudarme a crecer en cada aspecto de mi vida.\\
 Yo.
